# wallpaper-manager

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
cli/: Cargo.toml  build.rs
cli/src/: main.rs  opts.rs
daemon/: Cargo.toml
daemon/src/: ipc_server.rs  lib.rs  shuffle.rs  socket.rs  wallpaper_manager.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
